# MyWorks

./: .copilotignore  .gitignore  Copilot_Tokens_optimizers.html  Prompts.md  README-MIGRATION.md  README.md  codebase-graph.json  github_copilot_token_optimizer_demo.html  migration_guide_interactive.html
devtools-suite/: README.md  devtools.py  pyproject.toml  requirements.txt
devtools-suite/.github/workflows/: arch-drift.yml  assumption-miner.yml  blast-radius.yml  cross-pr.yml  dead-code.yml  docfill.yml  flag-graveyard.yml  knowledge-extractor.yml
devtools-suite/tools/: DevTools Suite — Problem Statement & Use Cases.md
devtools-suite/tools/arch_drift/: arch_drift.py
devtools-suite/tools/arch_drift/core/: models.py
devtools-suite/tools/arch_drift/reporters/: html_reporter.py
devtools-suite/tools/arch_drift/rules/: loader.py
devtools-suite/tools/arch_drift/scanner/: git_history.py  import_graph.py  violation_engine.py
devtools-suite/tools/assumption_miner/: assume_miner.py
devtools-suite/tools/assumption_miner/core/: models.py
devtools-suite/tools/assumption_miner/patterns/: csharp_detector.py  java_ts_detector.py
devtools-suite/tools/assumption_miner/registry/: registry.py
devtools-suite/tools/blast_radius/: blast_radius.py
devtools-suite/tools/blast_radius/hooks/: pre-commit
devtools-suite/tools/cross_pr/: cross_pr.py
devtools-suite/tools/dead_code/: dead_code.py
devtools-suite/tools/docstring_filler/: docfill.py
devtools-suite/tools/flag_graveyard/: flag_graveyard.py
devtools-suite/tools/knowledge_extractor/: knowledge_extractor.py
(+321 files in other folders)
