[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "devtools-suite"
version = "1.0.0"
description = "8 engineering intelligence tools for C#, Java & Angular codebases"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
ai = ["openai>=1.0"]

[project.scripts]
devtools = "devtools:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json", "*.md"]
